--- a/index.css
+++ b/index.css
@@ -242,7 +242,7 @@ footer {
 
 /*-----------------------------------------------------------*/
 
-@media (min-width: 1200px) {
+@media (min-width: 1200rem) {
   body {
     display: none;
   }
