--- a/index.css
+++ b/index.css
@@ -244,7 +244,7 @@ footer {
 
 @media (min-width: 600px) {
   body {
-    /*display: none;*/
+    display: none;
   }
   header {
     display: flex;
